@@ -3,6 +3,7 @@ from ucommon 3.2.0 to 3.2.1
 - string hexpack and hexdump functions.
 - random and digest uuid functions.
 - make sure we always ignore pthread/pth if msw targets (fedora mingw32).
+- barrier patch from Leon Pollak.
 
 from ucommon 3.1.2 to 3.2.0
 - added explicit add and remove for NamedObject to make keymap easier to use.
